RESOLVED FIXED256709
[GStreamer][WebRTC] Notify end of ICE gathering when end-of-candidates is signaled in SDP
https://bugs.webkit.org/show_bug.cgi?id=256709
Summary [GStreamer][WebRTC] Notify end of ICE gathering when end-of-candidates is sig...
Philippe Normand
Reported 2023-05-12 09:36:30 PDT
.
Attachments
Philippe Normand
Comment 1 2023-05-12 09:48:03 PDT
EWS
Comment 2 2023-05-15 01:13:46 PDT
Committed 264062@main (f24a5bb839ee): <https://commits.webkit.org/264062@main> Reviewed commits have been landed. Closing PR #13810 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-05-15 01:14:20 PDT
Note You need to log in before you can comment on or make changes to this bug.