[GStreamer][WebRTC] Notify end of ICE gathering when end-of-candidates is signaled in SDP https://bugs.webkit.org/show_bug.cgi?id=256709

Reviewed by Xabier Rodriguez-Calvar.

Notify the backend in case all m-lines of the current local description have signaled all their ICE
candidates using the end-of-candidates SDP attribute.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::doSetLocalDescription):
(WebCore::GStreamerMediaEndpoint::doSetRemoteDescription):
(WebCore::GStreamerMediaEndpoint::isIceGatheringComplete):
(WebCore::GStreamerMediaEndpoint::onIceCandidate):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.h:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.cpp:
(WebCore::capsFromSDPMedia):

Canonical link: https://commits.webkit.org/264062@main